# twitter-dashboard

./: .env_example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  stream_api.py
flask_app/: .env_example  app.py  stream_api.py  tweet.py  tweet_store.py
flask_app/static/: styles.css
flask_app/templates/: index.html  tweets.html
templates/: index.html
